try fixing meter styling on safari

--- a/index.css
+++ b/index.css
@@ -89,6 +89,15 @@ aside a {
 
 /* Meter */
 
+@media not all and (min-resolution:.001dpcm) {
+    @media {
+       meter {
+            -webkit-appearance: none;
+            appearance: none;
+        }
+    }
+}
+
 meter {
     display: block;
     width: 100%;
